{
    "name": "InputManager",
    "maps": [
        {
            "name": "Player",
            "id": "daf3d0b3-8d53-4ae8-81b2-36e6001019e7",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "b56da116-8139-491e-bfa4-2e26957b2054",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": true
                },
                {
                    "name": "Skill_1",
                    "type": "Button",
                    "id": "d29533b9-8aed-4117-bb76-a3f52f599ad3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Skill_2",
                    "type": "Button",
                    "id": "02e1566c-7653-403a-941e-9458a0465e11",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Skill_3",
                    "type": "Button",
                    "id": "cf7e8b0f-e77a-43e6-8a26-bef4ea8630a1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Skill_4",
                    "type": "Button",
                    "id": "7d38db35-5226-4c8d-bca8-0ae20d5a4b19",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Skill_5",
                    "type": "Button",
                    "id": "f74b85f3-4916-4022-a2ef-ddcdc0a9f612",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "6b8d9074-b76c-4d93-80a5-bcfcc3bb81e2",
                    "path": "1DAxis",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "f34453e2-2574-4765-b0f9-99d321d0e20b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "085760c3-d970-47f0-897e-8b5d62b5ede6",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "98846bd4-5d80-409a-b3cf-5ec7f564c718",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skill_1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "339f0039-83c9-4dae-8bf4-c0d085a506f7",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skill_2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2f62da63-52c4-467d-9d8a-2067edc238e9",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skill_3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55077604-6e04-44f7-8d60-c087d0c62578",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skill_4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5c232637-b4e6-43bc-bf21-9121be1c77eb",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skill_5",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}